--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,14 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 
+.block {
+    background-color: black;
+    color: white;
+    padding: 20px;
+    margin-bottom: 40px;
+    display: inline-block;
+    width: 33%;
+}
